fixed weird table header issue within align-items baseline

--- a/src/app/pricing-lookup/pricing-lookup.component.scss
+++ b/src/app/pricing-lookup/pricing-lookup.component.scss
@@ -71,7 +71,7 @@
   // }
 }
 
-.panel-body {
+.panel-body--secondary {
   @media only screen and (min-width: 1024px) {
     .job-info-container {
       display: flex;
@@ -84,6 +84,7 @@
 .mat-table {
   .th-container {
     display: flex;
+    align-items: baseline;
     & .fd-has-text-align-right {
       padding-right: 6px;
     }
